Fix album cover text alignment

--- a/frontend/src/app/components/album/album.component.scss
+++ b/frontend/src/app/components/album/album.component.scss
@@ -33,7 +33,9 @@
       &:hover {
         .inner-cover {
           display: flex;
+          justify-content: center;
           align-items: center;
+          text-align: center;
         }
       }
     }
